@@ -42,7 +42,9 @@ int* sum_events_in_interval(double* event_times, int num_events, double start_ti
 {
     if (interval_valid(start_time, end_time) != 1 || event_times == NULL || num_events < 1 || num_subintervals < 1)
 	return NULL;
+#ifdef VERBOSE 
     printf("num subintervals %d num events %d\n", num_subintervals, num_events);
+#endif
     int i = 0, current_interval = 0;
     double subinterval_time = (end_time - start_time) / num_subintervals;
 
